updating image sizing and overlay location

--- a/static/rinks.html
+++ b/static/rinks.html
@@ -16,7 +16,7 @@
   <div class="plotly">
     <div class="chart" id="full-rink-horz"></div>  <!-- This would instead be your chart -->
   </div>
-  <img class="overlay" src="https://hockeyrink.geospatial.is/assets/img/mytable.png" />
+  <img class="overlay" src="https://hockeyrink.geospatial.is/static/assets/img/mytable.png" />
   </div>
 </div>
 
