reverting changes to static plots

--- a/static/rinks.html
+++ b/static/rinks.html
@@ -11,16 +11,7 @@
 
 <h2>Rink Plots</h2>
 <h3>Full Rink, Horizontal</h3>
-<!-- https://stackoverflow.com/questions/36340238/overlay-image-on-top-of-plotly-plot-svg/36341292 -->
-<div class="wrapper">
-  <div class="plotly">
-    <div class="chart" id="full-rink-horz"></div>  <!-- This would instead be your chart -->
-  </div>
-  <img class="overlay" src="https://hockeyrink.geospatial.is/static/assets/img/mytable.png" />
-  </div>
-</div>
-
-<!-- <div class="chart" id="full-rink-horz"></div> -->
+<div class="chart" id="full-rink-horz"></div>
 <h3>Full Rink, Vertical</h3>
 <div class="chart" id="full-rink-vert"></div>
 <h3>Half Rink, Horizontal</h3>
