displaying toggle buttons in top right - no markers on map

--- a/finals/index.html
+++ b/finals/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 
-	<div id="map"></div>
+	<div id="map"></div><nav id="filter-group" class="filter-group"></nav>
 	<script src="js/javascript.js"></script>
   <!-- <div id='map' style='width: 400px; height: 300px;'></div> -->
 
