displaying entire notebook with iframe without nbviewer menubar

--- a/finals/game1.html
+++ b/finals/game1.html
@@ -23,8 +23,8 @@
 	<script src="js/javascript.js"></script> -->
   <!-- <div id='map' style='width: 400px; height: 300px;'></div> -->
 
-
-<iframe src="https://nbviewer.jupyter.org/github/vanmeciv/icerinks/blob/71bc778fe2bfbb558e33d6571ffb48556c2c418d/finals/py/Game_1.ipynb" scrolling="no" title="Iframe Example"></iframe>
+<!-- scrolling="no" -->
+<iframe src="https://nbviewer.jupyter.org/github/vanmeciv/icerinks/blob/71bc778fe2bfbb558e33d6571ffb48556c2c418d/finals/py/Game_1.ipynb" title="Iframe Example"></iframe>
 
 </body>
 </html>
