--- a/finals/game6.html
+++ b/finals/game6.html
@@ -24,7 +24,7 @@
   <!-- <div id='map' style='width: 400px; height: 300px;'></div> -->
 
 <!-- scrolling="no" -->
-<iframe src="http://nbviewer.ipython.org/github/vanmeciv/icerinks/blob/a199fa898986288cec994eb289050d7c55601944/finals/py/Game1/Game_1.ipynb" title="Iframe Example"></iframe>
+<iframe src="https://nbviewer.jupyter.org/github/vanmeciv/icerinks/blob/e7a72c23ab66d8b33d9e494f0a37b42714cb60a8/finals/py/Game_2.ipynb" title="Iframe Example"></iframe>
 
 </body>
 </html>
