updating html iframes

--- a/finals/game1.html
+++ b/finals/game1.html
@@ -24,7 +24,7 @@
   <!-- <div id='map' style='width: 400px; height: 300px;'></div> -->
 
 <!-- scrolling="no" -->
-<iframe src="http://nbviewer.ipython.org/github/vanmeciv/icerinks/blob/a199fa898986288cec994eb289050d7c55601944/finals/py/Game1/Game_1.ipynb" title="Iframe Example"></iframe>
+<iframe src="https://nbviewer.jupyter.org/github/vanmeciv/icerinks/blob/70686c89f459926fa09f3e112e5fab7dd50c64e1/finals/py/Game1/Game_1.ipynb" title="Iframe Example"></iframe>
 
 </body>
 </html>
