--- a/finals/game4.html
+++ b/finals/game4.html
@@ -24,7 +24,7 @@
   <!-- <div id='map' style='width: 400px; height: 300px;'></div> -->
 
 <!-- scrolling="no" -->
-<iframe src="https://nbviewer.jupyter.org/github/vanmeciv/icerinks/blob/a199fa898986288cec994eb289050d7c55601944/finals/py/Game5/Game_5.ipynb" title="Iframe Example"></iframe>
+<iframe src="" title="Iframe Example"></iframe>
 
 </body>
 </html>
