--- a/finals/game7.html
+++ b/finals/game7.html
@@ -24,7 +24,7 @@
   <!-- <div id='map' style='width: 400px; height: 300px;'></div> -->
 
 <!-- scrolling="no" -->
-<iframe src="https://nbviewer.jupyter.org/github/vanmeciv/icerinks/blob/70686c89f459926fa09f3e112e5fab7dd50c64e1/finals/py/Game7/Game_7.ipynb" title="Iframe Example"></iframe>
+<iframe src="http://nbviewer.ipython.org/github/vanmeciv/icerinks/blob/c59d8fa0abe9e05c402f5abe8b8abf07c6c103f8/finals/py/Game7/Game_7.ipynb" title="Iframe Example"></iframe>
 
 </body>
 </html>
