--- a/finals/game6.html
+++ b/finals/game6.html
@@ -24,7 +24,7 @@
   <!-- <div id='map' style='width: 400px; height: 300px;'></div> -->
 
 <!-- scrolling="no" -->
-<iframe src="https://nbviewer.jupyter.org/github/vanmeciv/icerinks/blob/455414e727e22e0e0cfaf6d4c9ad69d6fb23ab4f/finals/py/Game6/Game_6.ipynb" title="Game 6"></iframe>
+<iframe id="iframe" src="https://nbviewer.jupyter.org/github/vanmeciv/icerinks/blob/455414e727e22e0e0cfaf6d4c9ad69d6fb23ab4f/finals/py/Game6/Game_6.ipynb" title="Game 6"></iframe>
 
 </body>
 </html>
