updating iframe urls

--- a/finals/game5.html
+++ b/finals/game5.html
@@ -24,7 +24,7 @@
   <!-- <div id='map' style='width: 400px; height: 300px;'></div> -->
 
 <!-- scrolling="no" -->
-<iframe id="iframe" src="https://nbviewer.ipython.org/github/vanmeciv/icerinks/blob/c59d8fa0abe9e05c402f5abe8b8abf07c6c103f8/finals/py/Game5/Game_5.ipynb" title="Game 5"></iframe>
+<iframe id="iframe" src="https://nbviewer.jupyter.org/github/vanmeciv/icerinks/blob/d6da4ca774d080e43e33fcc5d89e6f1ffa7c4997/finals/py/Game5/Game_5.ipynb" title="Game 5"></iframe>
 
 </body>
 </html>
