correcting style for proper iframe scrollbar

--- a/finals/index.html
+++ b/finals/index.html
@@ -25,7 +25,7 @@
   <!-- <div id='map' style='width: 400px; height: 300px;'></div> -->
 
 <!-- scrolling="no" -->
-<select id="selector">
+<select id="selector" scrolling="no">
     <option value="0">Select Game</option>
     <option value="https://hockeyrink.geospatial.is/finals/game1">Game 1</option>
     <option value="https://hockeyrink.geospatial.is/finals/game2">Game 2</option>
