--- a/finals/game1.html
+++ b/finals/game1.html
@@ -24,7 +24,7 @@
   <!-- <div id='map' style='width: 400px; height: 300px;'></div> -->
 
 <!-- scrolling="no" -->
-<iframe id="iframe" src="https://nbviewer.ipython.org/github/vanmeciv/icerinks/blob/a594a0250ee1275f75e4bc3a8c1eb46e08a3f416/finals/py/Game1/Events&GoalSequences.ipynb" title="Game 1"></iframe>
+<iframe id="iframe" src="https://nbviewer.jupyter.org/github/vanmeciv/icerinks/blob/a695ab2020e351e6756aca905870e9e64d50fa54/finals/py/Game1/Events&GoalSequences.ipynb" title="Game 1"></iframe>
 
 </body>
 </html>
