updating iframe urls

--- a/finals/index.html
+++ b/finals/index.html
@@ -18,14 +18,14 @@
   <!-- mapbox style close -->
 	<script src="https://code.jquery.com/jquery-1.9.1.js"></script>
 </head>
-<body>
+<body scroll="no" style="overflow: hidden">
 
 	<!-- <div id="map"></div><nav id="filter-group" class="filter-group"></nav>
 	<script src="js/javascript.js"></script> -->
   <!-- <div id='map' style='width: 400px; height: 300px;'></div> -->
 
 <!-- scrolling="no" -->
-<select id="selector" scrolling="no">
+<select id="selector" onchange="window.open(this.options[this.selectedIndex].value);">
     <option value="0">Select Game</option>
     <option value="https://hockeyrink.geospatial.is/finals/game1">Game 1</option>
     <option value="https://hockeyrink.geospatial.is/finals/game2">Game 2</option>
@@ -36,7 +36,7 @@
 		<option value="https://hockeyrink.geospatial.is/finals/game7">Game 7</option>
 </select>
 <div>
-    <iframe src="about:blank" frameborder="0" id="iframe"></iframe>
+    <iframe src="about:blank" frameborder="0" id="iframe" scrolling="no"></iframe>
 </div>
 <script>
 $(document).ready(function(){
