updating iframe urls

--- a/finals/game1.html
+++ b/finals/game1.html
@@ -24,7 +24,7 @@
   <!-- <div id='map' style='width: 400px; height: 300px;'></div> -->
 
 <!-- scrolling="no" -->
-<iframe id="iframe" src="https://nbviewer.jupyter.org/github/vanmeciv/icerinks/blob/4cdf6885db5b62f28e6267e34950e12dc858c005/finals/py/Game1/Events&GoalSequences.ipynb" title="Game 1"></iframe>
+<iframe id="iframe" src="http://nbviewer.ipython.org/github/vanmeciv/icerinks/blob/43a42e6a9a8ce23588a7e7a4f5ce4b63f7ceda20/finals/py/Game1/Events&GoalSequences.ipynb" title="Game 1"></iframe>
 
 </body>
 </html>
