--- a/finals/game5.html
+++ b/finals/game5.html
@@ -24,7 +24,7 @@
   <!-- <div id='map' style='width: 400px; height: 300px;'></div> -->
 
 <!-- scrolling="no" -->
-<iframe id="iframe" src="https://nbviewer.ipython.org/github/vanmeciv/icerinks/blob/3c53b95a49d24de7d4133c0a429a50108fc778c6/finals/py/Game5/Events&GoalSequences.ipynb" title="Game 5"></iframe>
+<iframe id="iframe" src="https://nbviewer.org/github/vanmeciv/icerinks/blob/master/finals/py/Game5/Events%26GoalSequences.ipynb" title="Game 5"></iframe>
 
 </body>
 </html>
