--- a/finals/game6.html
+++ b/finals/game6.html
@@ -24,7 +24,7 @@
   <!-- <div id='map' style='width: 400px; height: 300px;'></div> -->
 
 <!-- scrolling="no" -->
-<iframe id="iframe" src="https://nbviewer.ipython.org/github/vanmeciv/icerinks/blob/1ee53b34f42712b2575a725f9f8b4a1cc7ea9a2e/finals/py/Game6/Events&GoalSequences.ipynb" title="Game 6"></iframe>
+<iframe id="iframe" src="https://nbviewer.org/github/vanmeciv/icerinks/blob/master/finals/py/Game6/Events%26GoalSequences.ipynb" title="Game 6"></iframe>
 
 </body>
 </html>
