Linking to NBviewer endpoint

--- a/finals/index.html
+++ b/finals/index.html
@@ -27,13 +27,28 @@
 <!-- scrolling="no" -->
 <select id="selector" onchange="window.open(this.options[this.selectedIndex].value);">
     <option value="0">Select Game</option>
-    <option value="https://hockeyrink.geospatial.is/finals/game1">Game 1</option>
-    <option value="https://hockeyrink.geospatial.is/finals/game2">Game 2</option>
-    <option value="https://hockeyrink.geospatial.is/finals/game3">Game 3</option>
-		<option value="https://hockeyrink.geospatial.is/finals/game4">Game 4</option>
-		<option value="https://hockeyrink.geospatial.is/finals/game5">Game 5</option>
-		<option value="https://hockeyrink.geospatial.is/finals/game6">Game 6</option>
-		<option value="https://hockeyrink.geospatial.is/finals/game7">Game 7</option>
+		<!-- Original -->
+		<!-- <option value="https://hockeyrink.geospatial.is/finals/game1">Game 1</option> -->
+		<option value="https://nbviewer.org/github/vanmeciv/icerinks/blob/master/finals/py/Game1/Events%26GoalSequences.ipynb">Game 1</option>
+		<!-- Original -->
+		<!-- <option value="https://hockeyrink.geospatial.is/finals/game2">Game 2</option> -->
+		<option value="https://nbviewer.org/github/vanmeciv/icerinks/blob/master/finals/py/Game2/Events%26GoalSequences.ipynb">Game 2</option>
+		<!-- Original -->
+		<!-- <option value="https://hockeyrink.geospatial.is/finals/game3">Game 3</option> -->
+    <option value="https://nbviewer.org/github/vanmeciv/icerinks/blob/master/finals/py/Game3/Events%26GoalSequences.ipynb">Game 3</option>
+		<!-- Original -->
+		<!-- <option value="https://hockeyrink.geospatial.is/finals/game4">Game 4</option> -->
+		<option value="https://nbviewer.org/github/vanmeciv/icerinks/blob/master/finals/py/Game4/Events%26GoalSequences.ipynb">Game 4</option>
+		<!-- Original -->
+		<!-- <option value="https://hockeyrink.geospatial.is/finals/game5">Game 5</option> -->
+		<option value="https://nbviewer.org/github/vanmeciv/icerinks/blob/master/finals/py/Game5/Events%26GoalSequences.ipynb">Game 5</option>
+		<!-- Original -->
+		<!-- <option value="https://hockeyrink.geospatial.is/finals/game6">Game 6</option> -->
+		<option value="https://nbviewer.org/github/vanmeciv/icerinks/blob/master/finals/py/Game6/Events%26GoalSequences.ipynb">Game 6</option>
+		<!-- Original -->
+		<!-- <option value="https://hockeyrink.geospatial.is/finals/game7">Game 7</option> -->
+		<option value="https://nbviewer.org/github/vanmeciv/icerinks/blob/master/finals/py/Game7/Events%26GoalSequences.ipynb">Game 7</option>
+
 </select>
 <div>
     <iframe src="about:blank" frameborder="0" id="iframe" scrolling="no"></iframe>
